test/Fail/Issue3114.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  ?0 a x x₁ = ?0 b x x₁ : A (blocked on _9)

Issue3114.agda:10.10-11: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue3114.agda:10.10-11

Issue3114.agda:13.7-11: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue3114.agda:13.7-11
